--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.1.5+1
   pbp_django_auth: ^0.4.0
   http: ^1.6.0
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
@@ -97,3 +98,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+
