--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   
+  youtube_player_embed: ^1.6.4
   # URL launcher for opening external links (Google Maps, phone calls, etc.)
   url_launcher: ^6.2.5
   provider: ^6.1.5+1
@@ -46,6 +48,7 @@ dev_dependencies:
     sdk: flutter
   http: ^1.2.0
   flutter_cache_manager: ^3.3.0
+ 
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
